ecmascript/parser/tests/test262-error-references/fail/479332b63ff26de1.js.stderr
error: TS1005
 --> $DIR/tests/test262-parser/fail/479332b63ff26de1.js:1:5
  |
1 | ({a = 0});
  |     ^

